// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<Stream
  asset={
    Object {
      "comments": Object {
        "edges": Array [
          Object {
            "node": Object {
              "id": "comment-1",
            },
          },
          Object {
            "node": Object {
              "id": "comment-2",
            },
          },
        ],
      },
      "id": "asset-id",
      "isClosed": false,
    }
  }
  comments={
    Array [
      Object {
        "id": "comment-1",
      },
      Object {
        "id": "comment-2",
      },
    ]
  }
  disableLoadMore={false}
  onLoadMore={[Function]}
  user={null}
/>
`;

exports[`when has more comments renders hasMore 1`] = `
<Stream
  asset={
    Object {
      "comments": Object {
        "edges": Array [
          Object {
            "node": Object {
              "id": "comment-1",
            },
          },
          Object {
            "node": Object {
              "id": "comment-2",
            },
          },
        ],
      },
      "id": "asset-id",
      "isClosed": false,
    }
  }
  comments={
    Array [
      Object {
        "id": "comment-1",
      },
      Object {
        "id": "comment-2",
      },
    ]
  }
  disableLoadMore={false}
  hasMore={true}
  onLoadMore={[Function]}
  user={null}
/>
`;

exports[`when has more comments when loading more disables load more button 1`] = `
<Stream
  asset={
    Object {
      "comments": Object {
        "edges": Array [
          Object {
            "node": Object {
              "id": "comment-1",
            },
          },
          Object {
            "node": Object {
              "id": "comment-2",
            },
          },
        ],
      },
      "id": "asset-id",
      "isClosed": false,
    }
  }
  comments={
    Array [
      Object {
        "id": "comment-1",
      },
      Object {
        "id": "comment-2",
      },
    ]
  }
  disableLoadMore={true}
  hasMore={true}
  onLoadMore={[Function]}
  user={null}
/>
`;

exports[`when has more comments when loading more enable load more button after loading is done 1`] = `
<Stream
  asset={
    Object {
      "comments": Object {
        "edges": Array [
          Object {
            "node": Object {
              "id": "comment-1",
            },
          },
          Object {
            "node": Object {
              "id": "comment-2",
            },
          },
        ],
      },
      "id": "asset-id",
      "isClosed": false,
    }
  }
  comments={
    Array [
      Object {
        "id": "comment-1",
      },
      Object {
        "id": "comment-2",
      },
    ]
  }
  disableLoadMore={false}
  hasMore={true}
  onLoadMore={[Function]}
  user={null}
/>
`;
